--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     },
     "license": "MIT",
     "dependencies": {
-        "com.unity.quicksearch": "1.3.0-preview"
+        "com.unity.quicksearch": "1.4.1"
     }
 }
