Update package to work with Quick Search 1.6

--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-    "name": "ch.sttz.quicksearch.docs",
-    "displayName": "Quick Search Docs",
-    "version": "0.1.0",
-    "unity": "2018.4",
-    "description": "Unity Docs SearchProvider for Unity Quick Search.",
-    "keywords": [ "unity", "quicksearch", "docs" ],
-    "author": {
-        "name": "Adrian Stutz",
-        "email": "adrian@sttz.ch",
-        "url": "https://sttz.ch"
-    },
-    "license": "MIT",
-    "dependencies": {
-        "com.unity.quicksearch": "1.4.1"
-    }
+  "name": "ch.sttz.quicksearch.docs",
+  "displayName": "Quick Search Docs",
+  "version": "0.1.0",
+  "unity": "2019.3",
+  "description": "Unity Docs SearchProvider for Unity Quick Search.",
+  "keywords": [
+    "unity",
+    "quicksearch",
+    "docs"
+  ],
+  "author": {
+    "name": "Adrian Stutz",
+    "email": "adrian@sttz.ch",
+    "url": "https://sttz.ch"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "com.unity.quicksearch": "1.6.0"
+  },
+  "type": "tool"
 }
