Fix dependency to Newtonsoft

--- a/ch.sttz.quicksearch.docs.asmdef
+++ b/ch.sttz.quicksearch.docs.asmdef
@@ -3,14 +3,17 @@
     "references": [
         "com.unity.quicksearch"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": false,
-    "defineConstraints": []
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Newtonsoft.Json.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
